--- a/css/styles.css
+++ b/css/styles.css
@@ -42,6 +42,24 @@ hr{
     color: rgba(255, 255, 255, 0.664);
 }
 
+#overlay{
+    width: 100%;
+    height: 100%;
+    background: black;
+    display: flex;
+    position: fixed;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    color: white;
+    overflow: hidden;
+}
+
+#overlay h1{
+    margin-left: 20%;
+    margin-right: 20%;
+}
+
 #mobile-header{
     display: none;
 }
