--- a/css/styles.css
+++ b/css/styles.css
@@ -70,76 +70,18 @@ hr{
     right: 0px;
 }
 
-.nav-bar{
-    background: black;
-    color: white;
-    font-family: 'Poppins', sans-serif;
-    font-weight: 300;
-    align-items: center;
-    justify-content: space-around;
-    display: inline-flex;
-    width: 100%;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    position: sticky;
-    top: 0;
-}
-
-.nav-list{
-    display: inline-flex;
-    justify-content: space-around;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    font-size: 18px;
-    width: 70%;
-}
-
-.nav-list li{
-    list-style: none;
-}
-
-.nav-list li a{
-    text-decoration: none;
-    color: white;
-    padding: 5px 15px;
-    border-radius: 15px;
-    font-weight: 200;
-    transition: .5s;
-}
-
-.nav-list li a:hover{
-    background: white;
-    color: black;
-    font-weight: 800;
-    transition: .5s;
-}
-
-.nav-list li a:focus{
-    background: green;
-    color: white;
-    transition: .15s;
-}
-
-#web-report{
-    transform: translateY(-2px);
-}
-
-#web-report a i{
-    font-size: 25px;
-    transform: translateY(3px);
-}
-
 #logo{
     transition: .5s;
+    margin-right: 30px;
 }
 
 #logo a{
-    font-size: 20px;
+    font-size: 17px;
     text-transform: uppercase;
     cursor: pointer;
-    transition: .5s;
     color: white;
     text-decoration: none;
+    transition: .5s;
 }
 
 #logo a:hover{
@@ -154,6 +96,93 @@ hr{
 
 #mobile-logo{
     transition: .5s;
+}
+
+.nav-bar{
+    background: black;
+    color: white;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 300;
+    align-items: center;
+    justify-content: space-evenly;
+    display: flex;
+    width: 100%;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    position: sticky;
+    top: 0;
+}
+
+.nav-list{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-size: 17px;
+    text-align: center;
+    width: 90%;
+}
+
+.nav-list li{
+    list-style: none;
+    margin-bottom: 3px;
+}
+
+.nav-list li a{
+    text-decoration: none;
+    color: white;
+    padding: 5px 15px;
+    margin: 7px;
+    border-radius: 20px;
+    font-weight: 200;
+    transition: .5s;
+}
+
+.nav-list li a:hover{
+    background: white;
+    color: black;
+    font-weight: 800;
+    transition: .5s;
+}
+
+.nav-list li a:focus{
+    background: green;
+    color: white;
+    transition: .5s;
+}
+
+.report-container{
+    text-align: center;
+    margin-left: 30px;
+}
+
+.report-container li{
+    list-style: none;
+    margin-bottom: 3px;
+}
+
+.report-container li a{
+    color: white;
+    border-radius: 30px;
+    transition: .5s;
+    padding: 10px 10px;
+    text-decoration: none;
+    text-align: center;
+    align-items: center;
+}
+
+.report-container li a:hover{
+    background-color: white;
+    color: black;
+}
+
+#web-report{
+    transform: translateY(-2px);
+}
+
+#web-report a i{
+    font-size: 25px;
+    transform: translateY(3px);
 }
 
 .intro-section{
@@ -319,6 +348,20 @@ footer{
     transition: .5s;
 }
 
+#social-media-links #color-1:focus{
+    background: #0077b5;
+    color: white;
+    border-radius: 20px;
+    transition: .5s;
+}
+
+#social-media-links #color-2:focus{
+    background: #6a5acd;
+    color: white;
+    border-radius: 20px;
+    transition: .5s;
+}
+
 @media screen and (max-width: 1025px)
 {
     html{
@@ -351,12 +394,12 @@ footer{
     }
     .nav-bar{
         height: 100vh;
-        width: 80%;
-        top: 50px;
+        width: 100%;
+        top: 65px;
         position: fixed;
         padding-top: 0px;
         left: -900px;
-        z-index: 2;
+        z-index: 1;
         transition: 1.5s;
     }
     .nav-bar.active{
@@ -373,6 +416,9 @@ footer{
         text-align: center;
         align-items: center;
         position: fixed;
+    }
+    .report-container{
+        display: none;
     }
     #logo{
         display: none;
@@ -400,7 +446,6 @@ footer{
     }
     #report-icon{
         padding: 7px 15px;
-        transition: .5s;
         float: right;
         transform: translate(-10px, -35.5px);
     }
@@ -426,6 +471,7 @@ footer{
         text-align: center;
         align-items: center;
         margin-top: 30px;
+        z-index: 0;
     }
     .education{
         width: 100%;
