--- a/css/styles.css
+++ b/css/styles.css
@@ -104,8 +104,8 @@ hr{
     font-family: 'Poppins', sans-serif;
     font-weight: 300;
     align-items: center;
-    justify-content: space-evenly;
-    display: flex;
+    justify-content: space-around;
+    display: inline-flex;
     width: 100%;
     padding-top: 15px;
     padding-bottom: 15px;
@@ -114,7 +114,7 @@ hr{
 }
 
 .nav-list{
-    display: flex;
+    display: inline-flex;
     justify-content: space-between;
     margin-top: 10px;
     margin-bottom: 10px;
@@ -410,7 +410,7 @@ footer{
         top: 110px;
         width: 100%;
         height: 70%;
-        display: flex;
+        display: inline-flex;
         flex-direction: column;
         text-align: center;
         align-items: center;
