--- a/css/styles.css
+++ b/css/styles.css
@@ -351,7 +351,7 @@ footer{
     }
     .nav-bar{
         height: 100vh;
-        width: 80%;
+        width: 85%;
         top: 50px;
         position: fixed;
         padding-top: 0px;
@@ -403,6 +403,9 @@ footer{
         transition: .5s;
         float: right;
         transform: translate(-10px, -35.5px);
+    }
+    .button{
+        display: none;
     }
     #report-icon i{
         font-size: 28px;
