--- a/css/styles.css
+++ b/css/styles.css
@@ -151,6 +151,7 @@ hr{
     border-radius: 20px;
     font-size: 17px;
     font-weight: 500;
+    letter-spacing: 1.5px;
     margin-bottom: 2px;
 }
 
