--- a/css/styles.css
+++ b/css/styles.css
@@ -60,8 +60,12 @@ hr{
     margin-right: 20%;
 }
 
+.mobile-header-container{
+    position: sticky;
+    top: 0;
+}
+
 #mobile-header{
-    position: fixed;
     right: 0px;
     display: none;
 }
@@ -352,8 +356,8 @@ footer{
     }
     .nav-bar{
         height: 100vh;
-        width: 80%;
-        top: 50px;
+        width: 85%;
+        top: 70px;
         position: fixed;
         padding-top: 0px;
         left: -900px;
