--- a/css/styles.css
+++ b/css/styles.css
@@ -332,17 +332,28 @@ footer{
     color: white;
 }
 
+#footer-container{
+    text-align: center;
+    align-items: center;
+}
+
 #copyright{
-    margin-left: 5%;
-    margin-right: 5%;
+    margin-left: 10%;
+    margin-right: 10%;
     font-weight: 200;
 }
 
-#social-media-links{
-    margin-left: 3%;
-    margin-right: 3%;
+#last-updated{
     font-weight: 200;
-    float: right;
+    margin-left: 5%;
+    margin-right: 5%;
+    text-align: center;
+}
+
+#social-media-links{
+    margin-left: 5%;
+    margin-right: 5%;
+    font-weight: 500;
 }
 
 #social-media-links a{
@@ -359,6 +370,12 @@ footer{
     font-weight: 800;
     border-radius: 20px;
     transition: .5s;
+}
+
+#copyright, #last-updated, #social-media-links{
+    display: inline-block;
+    align-items: center;
+    padding: 5px;
 }
 
 @media screen and (max-width: 1025px)
@@ -549,16 +566,22 @@ footer{
         font-size: 15px;
     }
     #copyright{
-        font-size: 13px;
-        text-align: left;
-        float: inline-start;
+        font-size: 15px;
+        float: none;
         padding-top: 10px;
         padding-bottom: 10px;
+        margin-left: 4%;
+        margin-right: 4%;
+    }
+    #last-updated{
+        margin-left: 4%;
+        margin-left: 4%;
+        font-size: 15px;
     }
     #social-media-links{
         margin: 0;
         text-align: left;
         float: none;
-        font-size: 14px;
+        font-size: 15px;
     }
 }
