--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Teko:wght@300;400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 
 *{
     margin: 0;
@@ -15,8 +16,8 @@ html{
 body{
     width: 100%;
     height: 100%;
-    font-family: 'Urbanist', sans-serif;
-    font-size: 15px;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 16px;
 }
 
 img{
@@ -57,11 +58,11 @@ hr{
 
 #logo{
     transition: .5s;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Open Sans', sans-serif;
 }
 
 #logo a{
-    font-size: 15px;
+    font-size: 14px;
     text-transform: uppercase;
     cursor: pointer;
     transition: .5s;
@@ -86,7 +87,7 @@ hr{
 .nav-bar{
     background: black;
     color: white;
-    font-family: 'Urbanist', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     align-items: center;
     justify-content: space-around;
     display: inline-flex;
@@ -137,7 +138,7 @@ hr{
     border: none;
     background: rgb(63, 63, 63);
     color: white;
-    font-family: 'Urbanist', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     padding: 5px 0px;
     border-radius: 20px;
     font-size: 15px;
