--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Teko:wght@300;400;500;600;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 
 *{
@@ -82,6 +80,7 @@ hr{
 
 #mobile-logo{
     transition: .5s;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .nav-bar{
@@ -432,7 +431,7 @@ footer{
     #mobile-logo a{
         font-size: 16px;
         text-transform: uppercase;
-        font-family: 'Poppins', sans-serif;
+        font-family: 'Open Sans', sans-serif;
         cursor: pointer;
         transition: .5s;
         color: white;
