--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,8 @@ body{
     height: 100%;
     font-family: 'Open Sans', sans-serif;
     font-size: 16px;
+    background: #242525;
+    color: white;
 }
 
 img{
@@ -200,6 +202,11 @@ hr{
     margin-right: 5%;
     float: right;
     margin-top: 100px;
+}
+
+#download-link, #p-link{
+    color: white;
+    font-weight: 800;
 }
 
 .education{
