--- a/css/styles.css
+++ b/css/styles.css
@@ -238,7 +238,7 @@ hr{
     padding-top: 5px;
 }
 
-#software-content1, #software-content2, #software-content3, #software-content4{
+#software-content1, #software-content2, #software-content3, #software-content4, #software-content5{
     margin: 2em;
     font-size: 15px;
     letter-spacing: 0.5px;
@@ -474,7 +474,7 @@ footer{
         text-align: left;
         font-size: 15px;
     }
-    #software-content1, #software-content2, #software-content3, #software-content4{
+    #software-content1, #software-content2, #software-content3, #software-content4, #software-content5{
         margin-left: 3%;
         margin-right: 3%;
     }
