Made changes to CV website.

--- a/css/styles.css
+++ b/css/styles.css
@@ -59,14 +59,18 @@ hr{
     width: 100%;
     text-align: center;
     position: sticky;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
     top: 0;
 }
 
 .nav-container li{
     display: inline-block;
     margin: 20px;
-    margin-right: 25vh;
-    margin-left: 25vh;
+    margin-right: 20vh;
+    margin-left: 20vh;
 }
 
 #logo{
@@ -85,6 +89,12 @@ hr{
 
 #logo a:hover{
     color: rgba(136, 136, 136, 0.76);
+    transition: .5s;
+}
+
+#logo a:active {
+    color: white;
+    font-weight: 900;
     transition: .5s;
 }
 
