--- a/css/styles.css
+++ b/css/styles.css
@@ -195,6 +195,29 @@ hr{
     letter-spacing: 0.5px;
 }
 
+.skills {
+    background: rgb(121, 104, 7);
+    color: white;
+    width: 100%;
+    height: 100%;
+    padding-bottom: 50px;
+    padding-top: 50px;
+}
+
+.skills h1 {
+    text-align: center;
+    text-transform: uppercase;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 45px;
+    font-weight: 800;
+    letter-spacing: 0px;
+}
+
+.skills li {
+    list-style: none;
+    padding-top: 5px;
+}
+
 .experience{
     background: rgb(85, 39, 122);
     color: white;
